--- a/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
+++ b/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
@@ -35,6 +35,13 @@
             <li>Make Header and create Firebase</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.(optional) Environment variable for Firebase in Create React App
+        </h2>
+        <ul>
+            <li>Environment variable</li>
+        </ul>
+    </div>
 
 </body>
 </html>
