m61 v6: Set UseFirebase function

--- a/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
+++ b/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
@@ -42,6 +42,13 @@
             <li>Environment variable</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Set UseFirebase function and explain onAuthStateChanged
+        </h2>
+        <ul>
+            <li>Set UseFirebase function</li>
+        </ul>
+    </div>
 
 </body>
 </html>
