m61 v7: Create AuthContext and useAuth Hook

--- a/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
+++ b/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
@@ -49,6 +49,13 @@
             <li>Set UseFirebase function</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Create AuthContext and useAuth Hook and connect with Header
+        </h2>
+        <ul>
+            <li>Create AuthContext and useAuth Hook</li>
+        </ul>
+    </div>
 
 </body>
 </html>
