m61 v8: Private Route setup

--- a/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
+++ b/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
@@ -56,6 +56,13 @@
             <li>Create AuthContext and useAuth Hook</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Private Route and Explain purpose of onAuthStateChanged
+        </h2>
+        <ul>
+            <li>Private Route setup</li>
+        </ul>
+    </div>
 
 </body>
 </html>
