--- a/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
+++ b/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
@@ -63,6 +63,13 @@
             <li>Private Route setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Fix Reload redirect to login page issue and Firebase deploy
+        </h2>
+        <ul>
+            <li>Fix Reload redirect to login</li>
+        </ul>
+    </div>
 
 </body>
 </html>
