m61.5 v2: Practice Hot Onion and Travel Guru

--- a/Milestone_10 - React Authentication/Module_61.5 - React and Firebase Practices/01_About Module 61.5.html
+++ b/Milestone_10 - React Authentication/Module_61.5 - React and Firebase Practices/01_About Module 61.5.html
@@ -14,6 +14,13 @@
             <li>How to debug react application</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Practice Firebase auth with Hot Onion and Travel Guru
+        </h2>
+        <ul>
+            <li>Practice Hot Onion and Travel Guru</li>
+        </ul>
+    </div>
 
 </body>
 </html>
