--- a/Milestone_10 - React Authentication/Module_62 - React Auth Assignment/01_About Module 62.html
+++ b/Milestone_10 - React Authentication/Module_62 - React Auth Assignment/01_About Module 62.html
@@ -14,6 +14,20 @@
             <li>How to think about project</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>1.How to think manage a simple development project
+        </h2>
+        <ul>
+            <li>How to think about project</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>2.Healthcare related website with Authentication
+        </h2>
+        <ul>
+            <li>How to think about project</li>
+        </ul>
+    </div>
 
 </body>
 </html>
