--- a/Milestone_10 - React Authentication/Module_62.5 - Google Map/01_About Module 62.html
+++ b/Milestone_10 - React Authentication/Module_62.5 - Google Map/01_About Module 62.html
@@ -14,6 +14,13 @@
             <li>Display location</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Display Driving Direction And Route On Google Map
+        </h2>
+        <ul>
+            <li>Display Driving Direction</li>
+        </ul>
+    </div>
 
 </body>
 </html>
