m62.5 v4: Use Mapbox Gl

--- a/Milestone_10 - React Authentication/Module_62.5 - Google Map/01_About Module 62.html
+++ b/Milestone_10 - React Authentication/Module_62.5 - Google Map/01_About Module 62.html
@@ -25,7 +25,14 @@
         <h2>3.Dynamically Search And Display Travelling Route On Google Map
         </h2>
         <ul>
-            <li>Dynamically Search And Display Toute</li>
+            <li>Dynamically Search And Display Route</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>4.Use Mapbox Gl As An Alternative To Google Map
+        </h2>
+        <ul>
+            <li>Use Mapbox Gl</li>
         </ul>
     </div>
 
