--- a/Milestone_10 - React Authentication/Module_62.5 - Google Map/01_About Module 62.html
+++ b/Milestone_10 - React Authentication/Module_62.5 - Google Map/01_About Module 62.html
@@ -35,6 +35,13 @@
             <li>Use Mapbox Gl</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Mapbox Direction, Learn How To Update Title Based On Route
+        </h2>
+        <ul>
+            <li>Mapbox Direction</li>
+        </ul>
+    </div>
 
 </body>
 </html>
