m64 v5: Access query parameter

--- a/Milestone_11 - Backend/Module_63 - Node Express API/01_About Module 63.html
+++ b/Milestone_11 - Backend/Module_63 - Node Express API/01_About Module 63.html
@@ -32,7 +32,14 @@
         <h2>4.Create dynamic api, api parameter, access params
         </h2>
         <ul>
-            <liCreate dynamic api</li>
+            <li>Create dynamic api</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>5.Access query parameter and return search result
+        </h2>
+        <ul>
+            <li>Access query parameter</li>
         </ul>
     </div>
 
