--- a/Milestone_11 - Backend/Module_63 - Node Express API/01_About Module 63.html
+++ b/Milestone_11 - Backend/Module_63 - Node Express API/01_About Module 63.html
@@ -42,6 +42,13 @@
             <li>Access query parameter</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Use fetch to load data from server, middleware, handle cors
+        </h2>
+        <ul>
+            <li>Load data from local server</li>
+        </ul>
+    </div>
 
 </body>
 </html>
