m63 v8: POST data to server and display

--- a/Milestone_11 - Backend/Module_63 - Node Express API/01_About Module 63.html
+++ b/Milestone_11 - Backend/Module_63 - Node Express API/01_About Module 63.html
@@ -56,6 +56,13 @@
             <li>Create Post API</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.POST data to server and display them on the UI
+        </h2>
+        <ul>
+            <li>POST data to server and display</li>
+        </ul>
+    </div>
 
 </body>
 </html>
