--- a/Milestone_11 - Backend/Module_64 - MongoDB, CRUD/01_About Module 64.html
+++ b/Milestone_11 - Backend/Module_64 - MongoDB, CRUD/01_About Module 64.html
@@ -14,6 +14,13 @@
             <li>Overview mongodb</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Node mongo crud server, mongodb atlas account
+        </h2>
+        <ul>
+            <li>Node mongo crud server</li>
+        </ul>
+    </div>
 
 </body>
 </html>
