--- a/Milestone_11 - Backend/Module_64 - MongoDB, CRUD/01_About Module 64.html
+++ b/Milestone_11 - Backend/Module_64 - MongoDB, CRUD/01_About Module 64.html
@@ -28,6 +28,13 @@
             <li>Send data to database</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.(Recap) Async await, try catch and mongodb connection
+        </h2>
+        <ul>
+            <li>(Recap) Async await, try catch</li>
+        </ul>
+    </div>
 
 </body>
 </html>
