m64 v5: Setup client side

--- a/Milestone_11 - Backend/Module_64 - MongoDB, CRUD/01_About Module 64.html
+++ b/Milestone_11 - Backend/Module_64 - MongoDB, CRUD/01_About Module 64.html
@@ -35,6 +35,13 @@
             <li>(Recap) Async await, try catch</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Setup client side React App to send data to the server
+        </h2>
+        <ul>
+            <li>Setup client side</li>
+        </ul>
+    </div>
 
 </body>
 </html>
