--- a/Milestone_11 - Backend/Module_64 - MongoDB, CRUD/01_About Module 64.html
+++ b/Milestone_11 - Backend/Module_64 - MongoDB, CRUD/01_About Module 64.html
@@ -56,6 +56,20 @@
             <li>Load data from database</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Load data database data and show on the website
+        </h2>
+        <ul>
+            <li>Load data from database</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>8.Delete an item from the database and update the UI
+        </h2>
+        <ul>
+            <li>Delete an item from the database</li>
+        </ul>
+    </div>
 
 </body>
 </html>
