--- a/Milestone_11 - Backend/Module_64 - MongoDB, CRUD/01_About Module 64.html
+++ b/Milestone_11 - Backend/Module_64 - MongoDB, CRUD/01_About Module 64.html
@@ -77,6 +77,13 @@
             <li>Load single user and display</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>10.CRUD operation and module summary
+        </h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
