--- a/Milestone_11 - Backend/Module_64.5 - CRUD update/01_About Module 64.5.html
+++ b/Milestone_11 - Backend/Module_64.5 - CRUD update/01_About Module 64.5.html
@@ -14,6 +14,13 @@
             <li>Setup Update form</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Update an User and store the user to the database
+        </h2>
+        <ul>
+            <li>Update an User</li>
+        </ul>
+    </div>
 
 </body>
 </html>
