--- a/Milestone_11 - Backend/Module_64.5 - CRUD update/01_About Module 64.5.html
+++ b/Milestone_11 - Backend/Module_64.5 - CRUD update/01_About Module 64.5.html
@@ -21,6 +21,13 @@
             <li>Update an User</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Practice user management, Practice product management
+        </h2>
+        <ul>
+            <li>About practices</li>
+        </ul>
+    </div>
 
 </body>
 </html>
