--- a/Milestone_11 - Backend/Module_65 - Genius Car Mongo DB/01_About Module 65.html
+++ b/Milestone_11 - Backend/Module_65 - Genius Car Mongo DB/01_About Module 65.html
@@ -21,6 +21,13 @@
             <li>Project setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Setup simple node express server and explore mongodb
+        </h2>
+        <ul>
+            <li>Setup server</li>
+        </ul>
+    </div>
 
 </body>
 </html>
