--- a/Milestone_11 - Backend/Module_65 - Genius Car Mongo DB/01_About Module 65.html
+++ b/Milestone_11 - Backend/Module_65 - Genius Car Mongo DB/01_About Module 65.html
@@ -49,6 +49,13 @@
             <li>Use React hook form</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Insert Service data to the mongodb cloud database
+        </h2>
+        <ul>
+            <li>Insert Service data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
