m64 v7: Load all services and single service

--- a/Milestone_11 - Backend/Module_65 - Genius Car Mongo DB/01_About Module 65.html
+++ b/Milestone_11 - Backend/Module_65 - Genius Car Mongo DB/01_About Module 65.html
@@ -56,6 +56,13 @@
             <li>Insert Service data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Load all services and single service from the server
+        </h2>
+        <ul>
+            <li>Load all services and single service</li>
+        </ul>
+    </div>
 
 </body>
 </html>
