--- a/Milestone_11 - Backend/Module_65 - Genius Car Mongo DB/01_About Module 65.html
+++ b/Milestone_11 - Backend/Module_65 - Genius Car Mongo DB/01_About Module 65.html
@@ -63,6 +63,13 @@
             <li>Load all services and single service</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Display all services and explore delete api
+        </h2>
+        <ul>
+            <li>Display all services and delete api</li>
+        </ul>
+    </div>
 
 </body>
 </html>
