m66 v2: Connect with mongo database

--- a/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
+++ b/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
@@ -14,6 +14,13 @@
             <li>Ema-john server setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Run client side project and connect with mongo database
+        </h2>
+        <ul>
+            <li>Connect with mongo database</li>
+        </ul>
+    </div>
 
 </body>
 </html>
