--- a/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
+++ b/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
@@ -18,7 +18,7 @@
         <h2>2.Run client side project and connect with mongo database
         </h2>
         <ul>
-            <li>Connect with mongo database</li>
+            <li>Connect with mongodb</li>
         </ul>
     </div>
 
