--- a/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
+++ b/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
@@ -21,6 +21,13 @@
             <li>Connect with mongodb</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Add data from JSON to database and load on the UI
+        </h2>
+        <ul>
+            <li>Add data to database and load</li>
+        </ul>
+    </div>
 
 </body>
 </html>
