m66 v5: Create pagination state and navigation

--- a/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
+++ b/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
@@ -35,6 +35,13 @@
             <li>Pagination and get page count</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.(Interesting) Create pagination state and navigation
+        </h2>
+        <ul>
+            <li>Create pagination state and navigation</li>
+        </ul>
+    </div>
 
 </body>
 </html>
