--- a/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
+++ b/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
@@ -42,6 +42,13 @@
             <li>Create pagination state and navigation</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Load data based on the page selected on the UI
+        </h2>
+        <ul>
+            <li>Load data based on the page</li>
+        </ul>
+    </div>
 
 </body>
 </html>
