--- a/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
+++ b/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
@@ -49,6 +49,13 @@
             <li>Load data based on the page</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Use Post to load some products using keys
+        </h2>
+        <ul>
+            <li>Load some products using keys</li>
+        </ul>
+    </div>
 
 </body>
 </html>
