--- a/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
+++ b/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
@@ -56,6 +56,13 @@
             <li>Load some products using keys</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Save orders in a new data collection in mongodb
+        </h2>
+        <ul>
+            <li>Save orders in DB</li>
+        </ul>
+    </div>
 
 </body>
 </html>
