--- a/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
+++ b/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
@@ -63,6 +63,13 @@
             <li>Save orders in DB</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary and A simple overview of node mailer
+        </h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
