m66 v10: Discuss about server

--- a/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
+++ b/Milestone_11 - Backend/Module_66 - E_commerce mongodb/01_About Module 66.html
@@ -70,6 +70,13 @@
             <li>Module Summary</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>10.(conceptual) Node vs Express, HTTP Method, Get VS POST
+        </h2>
+        <ul>
+            <li>Discuss about server</li>
+        </ul>
+    </div>
 
 </body>
 </html>
