--- a/Milestone_11 - Backend/Module_67 - Heroku Deploy/01_About Module 67.html
+++ b/Milestone_11 - Backend/Module_67 - Heroku Deploy/01_About Module 67.html
@@ -14,6 +14,13 @@
             <li>Understanding Node, build in methods</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Simple express server, Explore request and response
+        </h2>
+        <ul>
+            <li>Understanding express server</li>
+        </ul>
+    </div>
 
 </body>
 </html>
