m67 v3: Steps to connect to Mongodb

--- a/Milestone_11 - Backend/Module_67 - Heroku Deploy/01_About Module 67.html
+++ b/Milestone_11 - Backend/Module_67 - Heroku Deploy/01_About Module 67.html
@@ -21,6 +21,13 @@
             <li>Understanding express server</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Steps to connect to Mongodb database(15 steps)
+        </h2>
+        <ul>
+            <li>Steps to connect to Mongodb</li>
+        </ul>
+    </div>
 
 </body>
 </html>
