--- a/Milestone_11 - Backend/Module_67 - Heroku Deploy/01_About Module 67.html
+++ b/Milestone_11 - Backend/Module_67 - Heroku Deploy/01_About Module 67.html
@@ -28,6 +28,13 @@
             <li>Steps to connect to Mongodb</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Introduction to Heroku setup account and initial deploy
+        </h2>
+        <ul>
+            <li>Heroku setup account and initial deploy</li>
+        </ul>
+    </div>
 
 </body>
 </html>
