--- a/Milestone_11 - Backend/Module_67 - Heroku Deploy/01_About Module 67.html
+++ b/Milestone_11 - Backend/Module_67 - Heroku Deploy/01_About Module 67.html
@@ -35,6 +35,13 @@
             <li>Heroku setup account and initial deploy</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Deploy client side project to firebase with server side url
+        </h2>
+        <ul>
+            <li>Deploy client side project to firebase</li>
+        </ul>
+    </div>
 
 </body>
 </html>
